// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Act: Performances or acts available in the circus shows.
Animal: Animals involved in circus performances.
AnimalShowAssociation: Link table to associate animals with shows.
Show: Scheduled shows that occur at circuses.
Caretaker: Individuals responsible for the care of circus animals.
CaretakerAnimalAssociation: Link table to associate caretakers with animals.
Circu: Details about different circus setups.
Equipment: Equipment used in circus performances and logistics.
Performer: Information about performers within a circus.
PerformerActAssociation: Link table to associate performers with acts.
ShowEquipmentAssociation: Link table to associate equipment with shows.
Ticket: Tickets sold for circus shows.
'''
}

Table Act {
    id INTEGER [primary key]
    title VARCHAR 
    description TEXT 
    duration_minutes INTEGER 
    }

Table Animal {
    id INTEGER [primary key]
    name VARCHAR 
    species VARCHAR 
    age INTEGER 
    }

Table AnimalShowAssociation {
    id INTEGER [primary key]
    animal_id INTEGER 
    show_id INTEGER 
    }

Table Show {
    id INTEGER [primary key]
    name VARCHAR 
    date DATE 
    circus_id INTEGER 
    }

Table Caretaker {
    id INTEGER [primary key]
    name VARCHAR 
    start_date DATE 
    }

Table CaretakerAnimalAssociation {
    id INTEGER [primary key]
    caretaker_id INTEGER 
    animal_id INTEGER 
    }

Table Circu {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    start_date DATE 
    end_date DATE 
    }

Table Equipment {
    id INTEGER [primary key]
    name VARCHAR 
    function VARCHAR 
    }

Table Performer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    age INTEGER 
    specialty VARCHAR 
    }

Table PerformerActAssociation {
    id INTEGER [primary key]
    performer_id INTEGER 
    act_id INTEGER 
    }

Table ShowEquipmentAssociation {
    id INTEGER [primary key]
    show_id INTEGER 
    equipment_id INTEGER 
    }

Table Ticket {
    id INTEGER [primary key]
    show_id INTEGER 
    price INTEGER 
    seat_number VARCHAR 
    purchaser_name VARCHAR 
    }



// Relationships
    Ref: AnimalShowAssociation.(animal_id) < Animal.(id)
    Ref: AnimalShowAssociation.(show_id) < Show.(id)
    Ref: Show.(circus_id) < Circu.(id)
    Ref: CaretakerAnimalAssociation.(animal_id) < Animal.(id)
    Ref: CaretakerAnimalAssociation.(caretaker_id) < Caretaker.(id)
    Ref: PerformerActAssociation.(act_id) < Act.(id)
    Ref: PerformerActAssociation.(performer_id) < Performer.(id)
    Ref: ShowEquipmentAssociation.(equipment_id) < Equipment.(id)
    Ref: ShowEquipmentAssociation.(show_id) < Show.(id)
    Ref: Ticket.(show_id) < Show.(id)
